fix error message overlapping with button

--- a/src/features/player-settings/PlayerSettings.module.scss
+++ b/src/features/player-settings/PlayerSettings.module.scss
@@ -24,7 +24,7 @@ form {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  gap: 2vh;
+  gap: 3.5vh;
 }
 
 .section {
