--- a/src/global/components/input/Input.module.scss
+++ b/src/global/components/input/Input.module.scss
@@ -107,5 +107,5 @@
   position: absolute;
   color: $color-error;
   font-size: $font-size-medium-small;
-  padding: 1vh 0.2vw;
+  padding: 0.6vh 0.2vw;
 }
